--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,10 @@
   .app__primarybg {
     background-color: var(--primary-color);
   }
+
+  .app__darkbg {
+    background-color: var(--dark-color);
+  }
   
   .app__container {
     width: 100%;
