--- a/src/container/Footer/Footer.scss
+++ b/src/container/Footer/Footer.scss
@@ -3,6 +3,7 @@
     width: 100%;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
   
     @media screen and (max-width: 768px) {
       flex-direction: column;
@@ -128,4 +129,12 @@
       width: 100%;
       margin: 1rem 0;
     }
+  }
+
+  .app__footerWrap {
+    position:relative;
+    z-index: 1;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
   }
